--- a/src/components/Item/styles.css
+++ b/src/components/Item/styles.css
@@ -7,3 +7,12 @@
   font-size: 1.5rem;
   font-weight: 600;
 }
+
+.item-description {
+  max-height: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Number of lines to show */
+  -webkit-box-orient: vertical;
+}
