--- a/src/components/CartWidget/styles.css
+++ b/src/components/CartWidget/styles.css
@@ -1,15 +1,18 @@
 .cart-widget {
   position: relative;
-  cursor: pointer;
   margin-left: auto;
+  
+  a {
+    cursor: pointer;
+  }
 }
 
 .cart-badge {
   position: absolute;
-  right: -0.1rem;
+  right: -5px;
   background-color: #ef4444;
   color: white;
-  font-size: 0.75rem;
-  padding: 0 0.25rem;
-  border-radius: 9999px;
+  font-size: 12px;
+  padding: 0 5px;
+  border-radius: 5px;
 }
