--- a/src/components/ItemDetail/styles.css
+++ b/src/components/ItemDetail/styles.css
@@ -1,9 +1,9 @@
 .item-detail-card .card {
     align-items: center;
-    width: 400px;
+    width: 75%;
     margin: 20px auto;
 
     img {
-        max-width: 200px;
+        width: 600px;
     }
 }
